--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET="gvibes-498b2.appspot.com"
 VITE_FIREBASE_MESSAGING_SENDER_ID="677147463283"
 VITE_FIREBASE_APP_ID="1:677147463283:web:0a9668d36bc22022c2a406"
 VITE_FIREBASE_MEASUREMENT_ID="G-HJWYSF7XDD"
+VITE_ADMIN_KEY="9aQnFiI7xBd4fs9WXGP83nGLp5u2"
